templates/chirper/chirp-impl-service-akka-remoting.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chirpservice
  name: "chirpservice-akka-remoting"
spec:
  ports:
    - port: 2551
      protocol: "TCP"
      targetPort: 2551
  selector:
    app: chirpservice
