templates/chirper/chirp-impl-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chirpservice
  name: chirpservice
spec:
  clusterIp: None
  ports:
    - name: "http-lagom-api"
      port: 9000
      protocol: "TCP"
      targetPort: 9000
  selector:
    app: chirpservice
