templates/chirper/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - name: "http-play"
      port: 9000
